Added spanner transactions